# proto-ui

./: README.md  package-lock.json  package.json  proto-query-engine  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
proto-query-engine/: .gitignore  Cargo.toml
proto-query-engine/src/: lib.rs  utils.rs
proto-query-engine/tests/: web.rs
src/: app.html
src/lib/: arrowSqlUtils.ts  crudUtils.ts  dfSqlUtils.ts  fileUtils.ts  flowUtils.ts  graphUtils.ts  nodesUtils.ts  queryUtils.ts  signUtils.ts  storeUtils.ts  transformerUtils.ts
src/lib/ui/: data-analyzer.svelte  data-export.svelte  data-footer.svelte  data-header.svelte  data-import.svelte
src/lib/ui/editor/: code-editor.svelte  js-editor.svelte  sql-editor.svelte
src/lib/ui/modals/: chart-edit.svelte  file-select.svelte  query-edit.svelte  sql-edit.svelte  table-preview.svelte
src/lib/ui/nodes/: chart.svelte  csv-file.svelte  data-file.svelte  query-data-edge.svelte  query.svelte  transfomer.svelte
src/lib/ui/view/: chart-view.svelte  chart-wrapper.svelte  table-view.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
