[package]
name = "proto-query-engine"
version = "0.1.0"
authors = ["phas02 <suter.philipp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytes = "1.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Blob",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemWritableFileStream",
    "Navigator",
    "ReadableStream",
    "StorageManager",
    "Window",
] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
url = "2.5"
once_cell = "1.19"
object_store = "0.10"
datafusion = { version = "40.0.0", default-features = false }
tokio = { version = "^1.0" }
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind", "js-sys"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
